# nexora-ai

./: .dockerignore  .env.example  .gitignore  DOCKER-IMAGE-USAGE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  simple_evaluation.py
alembic/versions/: 08d71511ecdf_create_conversation_and_message_tables.py
docs/: Makefile  README.md  conf.py  index.rst  modules.rst  src.app.api.rst  src.app.api.v1.endpoints.rst  src.app.api.v1.rst  src.app.rst  src.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/api/v1/: index.rst
docs/api/v1/endpoints/: chat.rst  conversations.rst  health.rst  moderation.rst  voice.rst
images/: architecture-diagram.md
knowledge_base/: nexora.md
scripts/: build_docs.sh  create_migration.py  docker-build.sh  setup_database.py  setup_db.sh  setup_rag.py  setup_voice.py
src/app/: main.py
src/app/agents/: __init__.py  agent_router.py  chat_agent.py  events_agent.py  intent_classifier_agent.py  nexora_service.py  orchestrator_agent.py
src/app/agents/prompts/: chat_agent_prompts.yaml  events_agent_prompts.yaml  intent_classifier_prompts.yaml  orchestrator_agent_prompts.yaml  prompts_loader.py
src/app/agents/rag/: app.py  lancedb_setup.py
src/app/agents/tools/: __init__.py  base.py  bus_tools.py  cafeteria_tools.py  datetime_tools.py  department_tools.py  event_tools.py  exam_tools.py  rag_tools.py  user_tools.py
src/app/api/v1/endpoints/: chat.py  conversations.py  health.py  moderation.py  voice.py
src/app/core/auth/: api_auth.py
src/app/core/config/: settings.py
src/app/core/database/: __init__.py  config.py  connection.py
src/app/models/: __init__.py
src/app/models/database/: __init__.py  base.py  conversation.py
src/app/models/pydantic/: __init__.py  chat.py  department.py  health.py
src/app/schemas/: chat.py
src/app/services/: conversation_service.py  moderation_service.py  rag_service.py  voice_service.py
