[project]
name = "nexora-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.2.15",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]
