[project]
name = "nexora-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.2.15",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.0",
    "logfire>=3.18.0",
    "websockets>=13.0.1",
    "openai-whisper>=20240930",
    "openai>=1.0.0",
    "gtts>=2.5.3",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
]
