[project]
name = "nexora-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.2.15",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.0",
    "logfire>=3.18.0",
    "websockets>=13.0.1",
    "openai-whisper>=20240930",
    "openai>=1.0.0",
    "elevenlabs>=1.1.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    # RAG Dependencies
    "lancedb>=0.17.0",
    "tiktoken>=0.8.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.0",
    "tantivy>=0.19.0",
    "pylance>=0.2.0",
    "pylint>=3.3.7",
    # Documentation Dependencies
    "sphinx>=7.1.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-rtd-theme>=1.3.0",
    "furo>=2024.1.29",
    "sphinxcontrib-openapi>=0.8.0",
    "myst-parser>=2.0.0",
]
